@@ -5,15 +5,6 @@
   <title>isopropyl decomposition</title>
   <moleculeList>
     <molecule id="i-propyl">
-      <atomarray>
-        <atom id="a1" elementType="C"/>
-        <atom id="a2" elementType="C"/>
-        <atom id="a3" elementType="C"/>
-      </atomarray>
-      <bondarray>
-        <bond atomRefs2="a1 a2" order="1"/>
-        <bond atomRefs2="a2 a3" order="1"/>
-      </bondarray>
       <propertyList>
         <property dictRef="me:ZPE">
           <scalar units="cm-1">0.0</scalar>
@@ -51,15 +42,6 @@
     </molecule>
 
     <molecule id="propene">
-      <atomarray>
-        <atom id="a1" elementType="C"/>
-        <atom id="a2" elementType="C"/>
-        <atom id="a3" elementType="C"/>
-      </atomarray>
-      <bondarray>
-        <bond atomRefs2="a1 a2" order="1"/>
-        <bond atomRefs2="a2 a3" order="1"/>
-      </bondarray>
       <propertyList>
         <property dictRef="me:ZPE">
           <scalar units="cm-1">12275.0</scalar>
